--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mini Pokedex</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Press+Start+2P&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="sass/main.css">
 </head>
 <body>
-    
+    <h1>Charmander Evolutions</h1>
+<div class="imgFlex">
+
+    <img class="cardStyle" src="images/charmander.jpg" width="240em" height="260em" alt="Charmander">
+
+    <img class="cardStyle" src="images/charmeleon.jpg" width="240em" height="260em"  alt="Charmeleon">
+    <img class="cardStyle" src="images/charizard.jpg" width="240em" height="260em"  alt="Charizard">
+</div>
 </body>
 </html>
