--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <h1>Charmander Evolutions</h1>
 <div class="imgFlex">
 
-    <img class="cardStyle" src="images/charmander.jpg" width="240em" height="260em" alt="Charmander">
+    <img class="cardStyle" src="images/pokemonCard.jpg" width="240em" height="315em" alt="Charmander">
 
-    <img class="cardStyle" src="images/charmeleon.jpg" width="240em" height="260em"  alt="Charmeleon">
-    <img class="cardStyle" src="images/charizard.jpg" width="240em" height="260em"  alt="Charizard">
+    <img class="cardStyle" src="images/pokemonCard.jpg" width="240em" height="315em"  alt="Charmeleon">
+
+    <img class="cardStyle" src="images/pokemonCard.jpg" width="240em" height="315em"  alt="Charizard">
 </div>
 </body>
 </html>
