--- a/charmander.html
+++ b/charmander.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Charmander</title>
-    <link rel="stylesheet" href="sass/card.css">
+    <link rel="stylesheet" href="css/card.css">
 </head>
 <body>
 
