--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Press+Start+2P&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="sass/main.css">
+<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <h1>Charmander Evolutions</h1>
