Added a flipping effect to the cards on the home page

--- a/index.html
+++ b/index.html
@@ -14,11 +14,38 @@
     <h1>Charmander Evolutions</h1>
 <div class="imgFlex">
 
-    <img class="cardStyle" src="images/pokemonCard.jpg" width="240em" height="315em" alt="Charmander">
+    <div class="card">
+        <div class="innerCard">
+            <div class="front">
+                <img class="cardStyle" src="images/pokemonCard.jpg" width="240em" height="315em" alt="Charmander">
+            </div>
+            <div class="back">
+                <img class="cardStyle" src="images/charmander.png" width="240em" height="315em" alt="Charmander">
+            </div>
+        </div>
+    </div>
 
-    <img class="cardStyle" src="images/pokemonCard.jpg" width="240em" height="315em"  alt="Charmeleon">
+    <div class="card">
+        <div class="innerCard">
+            <div class="front">
+                <img class="cardStyle" src="images/pokemonCard.jpg" width="240em" height="315em" alt="Charmeleon">
+            </div>
+            <div class="back">
+                <img class="cardStyle" src="images/charmeleon.png" width="240em" height="315em" alt="Charmeleon">
+            </div>
+        </div>
+    </div>
 
-    <img class="cardStyle" src="images/pokemonCard.jpg" width="240em" height="315em"  alt="Charizard">
+    <div class="card">
+        <div class="innerCard">
+            <div class="front">
+                <img class="cardStyle" src="images/pokemonCard.jpg" width="240em" height="315em" alt="Charizard">
+            </div>
+            <div class="back">
+                <img class="cardStyle" src="images/charizard.png" width="240em" height="315em" alt="Charizard">
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
