displayed json content + style

--- a/charmander.html
+++ b/charmander.html
@@ -8,10 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Charmander</title>
-    <link rel="stylesheet" href="css/card.css">
+    <link rel="stylesheet" href="css/page.css">
 </head>
 <body>
-
+    <nav>
+        <a href="index.html">Main</a>
+    </nav>
+<div id="cardStats"></div>
     <script src="js/script.js"></script>
 </body>
 </html>
