--- a/charmeleon.html
+++ b/charmeleon.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/page.css">
     <title>Charmeleon</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Main</a>
+    </nav>
+    <div id="cardStats"></div>
     <script src="js/script.js"></script>
 </body>
 </html>
