--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img class="cardStyle" src="images/pokemonCard.jpg" width="240em" height="315em" alt="Charmander">
             </div>
             <div class="back">
-                <img class="cardStyle" src="images/charmander.png" width="240em" height="315em" alt="Charmander">
+                <a href="charmander.html">  <img class="cardStyle" src="images/charmander.png" width="240em" height="315em" alt="Charmander"></a>
             </div>
         </div>
     </div>
@@ -31,7 +31,7 @@
                 <img class="cardStyle" src="images/pokemonCard.jpg" width="240em" height="315em" alt="Charmeleon">
             </div>
             <div class="back">
-                <img class="cardStyle" src="images/charmeleon.png" width="240em" height="315em" alt="Charmeleon">
+               <a href="charmeleon.html"><img class="cardStyle" src="images/charmeleon.png" width="240em" height="315em" alt="Charmeleon"></a>
             </div>
         </div>
     </div>
@@ -42,7 +42,7 @@
                 <img class="cardStyle" src="images/pokemonCard.jpg" width="240em" height="315em" alt="Charizard">
             </div>
             <div class="back">
-                <img class="cardStyle" src="images/charizard.png" width="240em" height="315em" alt="Charizard">
+                <a href="charizard.html">  <img class="cardStyle" src="images/charizard.png" width="240em" height="315em" alt="Charizard"></a>
             </div>
         </div>
     </div>
